force-app/main/default/objects/DM_Season__c/fields/DM_Crop__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop__c</fullName>
    <label>Crop</label>
    <length>80</length>
    <type>Text</type>
</CustomField>