force-app/main/default/objects/DM_Season__c/fields/DM_Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Type__c</fullName>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Crop</fullName>
            </value>
            <value>
                <fullName>Cover Crop</fullName>
            </value>
            <value>
                <fullName>Cover Crop Incorporation</fullName>
            </value>
            <value>
                <fullName>Fallow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>