force-app/main/default/objects/DM_Season__c/fields/DM_Description__c.field-meta.xml
<CustomField>
    <fullName>DM_Description__c</fullName>
    <formula>if(isblank(DM_Crop__c),  DM_Rotation_Plan__r.DM_Field__r.Name + &quot; - &quot; + text(DM_Crop_Type__c) + &quot; - &quot; +  text(DM_Zone__c),
DM_Rotation_Plan__r.DM_Field__r.Name + &quot; - &quot; + DM_Crop__c + &quot; - &quot; +  text(DM_Crop_Type__c) + &quot; - &quot; +  text(DM_Zone__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>