force-app/main/default/objects/DM_Season__c/fields/DM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>