force-app/main/default/objects/DM_Season__c/fields/DM_Purpose__c.field-meta.xml
<CustomField>
    <fullName>DM_Purpose__c</fullName>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>