force-app/main/default/objects/DM_Season__c/fields/DM_Rotation_Plan__c.field-meta.xml
<CustomField>
    <fullName>DM_Rotation_Plan__c</fullName>
    <label>Rotation Plan</label>
    <referenceTo>DM_Rotation_Plan__c</referenceTo>
    <relationshipLabel>Seasons</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>