force-app/main/default/objects/DM_Season__c/fields/DM_Season__c.field-meta.xml
<CustomField>
    <fullName>DM_Season__c</fullName>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>