force-app/main/default/objects/DM_Season__c/fields/DM_Season_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DM_Season_Indicator__c</fullName>
    <formula>CASE(TEXT( DM_Season__c  ),
&quot;Spring&quot;, IMAGE(&quot;/resource/digitalm__DM_flower&quot;,&quot;Flower&quot;),
&quot;Summer&quot;, IMAGE(&quot;/resource/digitalm__DM_sun&quot;,&quot;Sun&quot;),
&quot;Fall&quot;, IMAGE(&quot;/resource/digitalm__DM_leaves&quot;,&quot;Leaves&quot;),
&quot;Winter&quot;, IMAGE(&quot;/resource/digitalm__DM_snowflake&quot;,&quot;Snowflake&quot;),
&quot;Not Found&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Season</label>
    <type>Text</type>
</CustomField>