force-app/main/default/objects/DM_Season__c/fields/DM_Year__c.field-meta.xml
<CustomField>
    <fullName>DM_Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Year 5</fullName>
            </value>
            <value>
                <fullName>Year 6</fullName>
            </value>
            <value>
                <fullName>Year 7</fullName>
            </value>
            <value>
                <fullName>Year 8</fullName>
            </value>
            <value>
                <fullName>Year 9</fullName>
            </value>
            <value>
                <fullName>Year 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>