force-app/main/default/objects/DM_Season__c/fields/DM_Zone__c.field-meta.xml
<CustomField>
    <fullName>DM_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Bed</fullName>
                <default>true</default>
                <label>In-Bed</label>
            </value>
            <value>
                <fullName>Inter-row</fullName>
            </value>
            <value>
                <fullName>Perimeter</fullName>
            </value>
            <value>
                <fullName>Pollinator</fullName>
            </value>
            <value>
                <fullName>Under Canopy/Vine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>