force-app/main/default/objects/DM_Season__c/recordTypes/DM_Season.recordType-meta.xml
<RecordType>
    <fullName>DM_Season</fullName>
    <active>true</active>
    <label>Season</label>
</RecordType>